Fix(Navbar): Dropdown menu dont overlap navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,13 @@
   box-shadow: var(--light-shadow);
 }
 
+
+
+.dropdown-menu-left {
+  right: 0;
+  left: auto;
+}
+
 img.logo {
   height: 50px;
 }
@@ -42,7 +49,7 @@ a.nav-link {
 }
 
 body {
-  background-color: #531295;
+  background-color:  #01232b95;
   font-family: var(--ff-secondary);
   color: var(--clr-cream);
 }
@@ -58,6 +65,10 @@ body {
   height: 100%;
   object-fit: cover;
   opacity: 1;
+}
+
+.navbar .dropdown-menu {
+  position: absolute;
 }
 
 /* Login styles */
